pullout game strong

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -4,6 +4,8 @@
 
 .img-logo {
   max-height: 64px;
+  opacity: 0.5;
+  filter: alpha(opacity=50); /* For IE8 and earlier */
 }
 
 .header-section-background {
