--- a/webApp/PongWebApp/css/main.css
+++ b/webApp/PongWebApp/css/main.css
@@ -10,63 +10,13 @@ body {
     background: black;
     color: white;
     height: 70vh;
-    margin: 0%;
 }
 
-.containerFlex {
+.container {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.footerFlex {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    font-family: "FFFForward";
-    text-align: center;
-}
-
-#wrapperHeader {
-    border-bottom: 10px solid white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 #header {
-    font-family: "FFFForward";
-    text-align: center;
-}
-
-.wrapperCanvas {
-    line-height: 0em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.canvasTitle {
-    font-family: "FFFForward";
-    text-align: center;
-    height: 25%;
-}
-
-.canvas {
-    font-family: "FFFForward";
-    text-align: center;
-    height: 75%;
-}
-
-.wrapperFooter {
-    border-top: 10px solid white;
-    line-height: 0em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.footer {
     font-family: "FFFForward";
     text-align: center;
 }
