--- a/webApp/PongWebApp/css/main.css
+++ b/webApp/PongWebApp/css/main.css
@@ -70,3 +70,14 @@ body {
     font-family: "FFFForward";
     text-align: center;
 }
+
+.event {
+    font-family: "Segoe UI";
+    font-size: 3vh;
+    height: 1em;
+    border-bottom: 2px solid white;
+    margin-top: 2%;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-bottom: 0%;
+}
