--- a/webApp/PongWebApp/css/main.css
+++ b/webApp/PongWebApp/css/main.css
@@ -81,3 +81,10 @@ body {
     margin-right: 10%;
     padding-bottom: 0%;
 }
+
+.apiData {
+    font-family: "Segoe UI"; 
+    font-size: 0.9rem;
+    text-align: center;
+    margin-bottom: 10%;
+}
